--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+body{
+	background:rgb(204, 204, 204);
+}
+li{
+	list-style-type:none;
+}
+a{
+	text-decoration-line:none;
+}
+h1{
+	text-align:center;
+}
+h2{
+	text-align:center;
+}
+.container{
+	height:100px;
+	width:80%;
+	border-radius:5px;
+	background:white;
+}
+.container-a{
+	height:400px;
+	width:80%;
+	background:white;
+	text-align:center;
+}
+video{
+	margin:5px;
+	border-radius:5px;
+}
